Don't render custom icon in incognito on Windows

Prevents popup favicon and Developer Tools window Icon from being
rendered on top of the incognito badge. Drawing the icon next to the
incognito badge was also tested but looked weird (like double icons).

The favicon / Developer Tools icon is still the icon used in the
Windows window switcher and not the incognito badge.

Bug: chromium:829724
Change-Id: Ie850cec31d51e808ad718ba96e32eac6b0942158
Reviewed-on: https://chromium-review.googlesource.com/1003378
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549686}
Former-commit-id: 5b5ee6345d13e3067a67ac782070df0bbcbcff51